--- a/Acacia_Back_End.csproj
+++ b/Acacia_Back_End.csproj
@@ -33,6 +33,7 @@
   <ItemGroup>
     <Folder Include="wwwroot\images\users\" />
     <Folder Include="wwwroot\invoices\" />
+    <Folder Include="wwwroot\backups\" />
     <Folder Include="wwwroot\pops\" />
   </ItemGroup>
 
