🔌Redis Connection string

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -15,7 +15,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "server=.\\SQLEXPRESS;database=Acacia.db;Trusted_Connection=true;TrustServerCertificate=true",
     "IdentityConnection": "server=.\\SQLEXPRESS;database=Identity.db;Trusted_Connection=true;TrustServerCertificate=true",
-    "Redis": "redis-19920.c81.us-east-1-2.ec2.cloud.redislabs.com:19920",
+    "Redis": "localhost",
     "RedisPassword": "jjF1hbEpCNPXGc6ZYtRbexax1YqowRWZ",
     "FrontEndUrl": "http://localhost:4200"
   },
