--- a/appsettings.json
+++ b/appsettings.json
@@ -18,7 +18,7 @@
     "IdentityConnection": "Data Source=tcp:acacia-back-enddbserver.database.windows.net,1433;Initial Catalog=Identity_db;User Id=quintessentialtuks@gmail.com@acacia-back-enddbserver;Password=Gucci.2023",
     "Redis": "redis-19920.c81.us-east-1-2.ec2.cloud.redislabs.com:19920",
     "RedisPassword": "jjF1hbEpCNPXGc6ZYtRbexax1YqowRWZ",
-    "FrontEndUrl": "https://acaciafrontend.azurewebsites.net"
+    "FrontEndUrl": "https://acaciafrontend.web.app"
   },
   "Token": {
     "Key": "This is a temporary key for development so don't freak out when you see this guys'",
